<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parkit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in_register"><b>Registrar!</b></string>
    <string name="action_sign_in_login"><b>Ingresar!</b></string>
    <string name="login_progress_signing_in">Login…</string>
    <string name="msg_new_user">Usuario nuevo?</string>
    <string name="msg_new_user_reg">Registrar!</string>
    <string name="msg_user_already_reg">Ya soy usuario?</string>
    <string name="title_activity_register">Registro</string>
    <string name="register_label_name">Nombre</string>
    <string name="register_label_lastname">Apellidos</string>
    <string name="register_label_email">Email</string>
    <string name="register_label_psw">Contraseña</string>
    <string name="register_label_plate">Placa</string>
    <string name="title_activity_list_parking">Parqueaderos</string>
    <string name="title_activity_detail_parking">Detalle Parqueadero</string>
    <string name="title_place_list">Places</string>
    <string name="title_place_detail">Place Detail</string>
    <string name="underlinedPrice"><u>Precio:</u></string>
    <string name="underlinedPriceTime"><u>Por 3 Horas</u></string>
    <string name="title_activity_section_detail">Informacion Plantas</string>
    <string name="title_sectionContent_legendinfo"><u>Información</u></string>
    <string name="title_sectionContent_localinfotitle"><u>Información Almacenes</u></string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <string name="title_activity_reserve_place">ReservePlaceActivity</string>
  <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-2472163106905714/6208887586</string>
     <string name="title_activity_elect_payment">ElectPaymentActivity</string>
    <string name="title_activity_confirm_reserve">ConfirmReserveActivity</string>
    <string name="title_activity_find_car">FindCarActivity</string>

    <!-- AR -->
    <string name="location_fetching">Trying to find out where you are</string>
    <string name="title_activity_car_location">CarLocationActivity</string>
    
    
    
</resources>
