<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
 
        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_rounded_corners"
            android:hint="@string/register_label_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/counter_text_bg" />

         <EditText
            android:id="@+id/lastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_label_lastname"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:inputType="textCapWords"
            android:background="@drawable/edittext_rounded_corners"
            android:textColorHint="@color/counter_text_bg"/>
         
         <EditText
            android:id="@+id/plate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_label_plate"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:inputType="textCapWords"
            android:background="@drawable/edittext_rounded_corners"
            android:textColorHint="@color/counter_text_bg"/>
 
        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_label_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:background="@drawable/edittext_rounded_corners"
            android:textColorHint="@color/counter_text_bg" />
 
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/register_label_psw"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:background="@drawable/edittext_rounded_corners"
            android:textColorHint="@color/counter_text_bg"/>
 
        <!-- Login Button -->
 
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/stylebutton"
            android:text="@string/action_sign_in_register"
            />
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/ly_button" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content">  
        
         <TextView
             android:id="@id/register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16.0dip"
             android:text="@string/msg_user_already_reg"
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="#ff000000"
             android:textSize="15sp" />

         <!-- Link to Login Screen --> 
         <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16.0dip"
            android:background="@null"
            android:text="@string/action_sign_in_login"
            android:textColor="#0000ff"
            android:textSize="15dp" />
        </LinearLayout>
          
    </LinearLayout>
 
</LinearLayout>